--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,11 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx4G
-org.gradle.daemon=false
+org.gradle.jvmargs = -Xmx4G
+org.gradle.daemon = false
 
-mod_id=sinew
-mod_version=0.0.0
+modName = Sinew
+modId = sinew
+modVersion = 1.1.0
 
-mc_version=1.20.1
-forge_version=47.1.3
-parchment_version=2023.09.03-1.20.1
-
-geckolib_version=4.7.1.2
-jei_version=15.20.0.106
+minecraft = 1.20.1
+forge = 47.1.3
+jei = 15.20.0.106
+mixin_extras = 0.3.6
