--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,16 @@
 buildscript {
     repositories {
         maven { url = "https://files.minecraftforge.net/maven" }
+        maven { url = 'https://maven.parchmentmc.org' }
         maven { url = "https://repo.spongepowered.org/repository/maven-public/" }
+
+        mavenCentral()
     }
     dependencies {
         classpath group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "5.1.+", changing: true
+        classpath 'org.parchmentmc:librarian:1.+'
         classpath group: "org.spongepowered", name: "mixingradle", version: "0.7-SNAPSHOT"
+
     }
 }
 
@@ -13,6 +18,7 @@ apply plugin: "net.minecraftforge.gradle"
 apply plugin: "eclipse"
 apply plugin: "idea"
 apply plugin: "maven-publish"
+apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: "org.spongepowered.mixin"
 
 mixin {
@@ -26,7 +32,7 @@ archivesBaseName = "Sinew"
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 minecraft {
-    mappings channel: "official", version: project.minecraft
+    mappings channel: "parchment", version: '2023.09.03-1.20.1'
     accessTransformer = file("src/main/resources/META-INF/accesstransformer.cfg")
     runs {
         client {
@@ -74,7 +80,21 @@ minecraft {
 sourceSets.main.resources {
     srcDir "src/generated/resources"
 }
-
+repositories {
+    maven {
+        url "https://www.cursemaven.com"
+        content {
+            includeGroup "curse.maven"
+        }
+    }
+    maven {
+        name "JEI maven"
+        url "https://maven.blamejared.com/"
+    }
+    flatDir {
+        dirs 'libs'
+    }
+}
 dependencies {
     minecraft "net.minecraftforge:forge:${project.minecraft}-${project.forge}"
 
@@ -90,10 +110,7 @@ dependencies {
     annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
 }
 
-repositories {
-    maven { url "https://www.cursemaven.com" }
-    maven { url "https://modmaven.k-4u.nl" }
-}
+
 
 jar {
     manifest {
