--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,23 @@
 # Navigation
 public net.minecraft.world.level.pathfinder.Path f_77362_ # nodes
 public net.minecraft.world.entity.ai.navigation.GroundPathNavigation m_26493_()I # getSurfaceY
+
+# Damage sources
+public net.minecraft.world.damagesource.DamageSources m_269079_(Lnet/minecraft/resources/ResourceKey;)Lnet/minecraft/world/damagesource/DamageSource; # source
+public net.minecraft.world.damagesource.DamageSources m_268998_(Lnet/minecraft/resources/ResourceKey;Lnet/minecraft/world/entity/Entity;Lnet/minecraft/world/entity/Entity;)Lnet/minecraft/world/damagesource/DamageSource; # source
+public net.minecraft.world.damagesource.DamageSources m_269298_(Lnet/minecraft/resources/ResourceKey;Lnet/minecraft/world/entity/Entity;)Lnet/minecraft/world/damagesource/DamageSource; # source
+
+# Effects
+public net.minecraft.client.gui.Gui$HeartType
+public net.minecraft.client.gui.Gui f_279580_ # GUI_ICONS_LOCATION
+
+# Armor
+public net.minecraft.world.item.ArmorItem f_265987_ # ARMOR_MODIFIER_UUID_PER_TYPE
+
+# Tools
+public net.minecraft.world.item.ArmorItem f_40383_ # defaultModifiers
+public net.minecraft.world.item.SwordItem f_43267_ # defaultModifiers
+public net.minecraft.world.item.DiggerItem f_40982_ # defaultModifiers
+
+# Mob
+public net.minecraft.world.entity.Mob m_21424_(Lnet/minecraft/world/entity/player/Player;Lnet/minecraft/world/item/ItemStack;Lnet/minecraft/world/item/ItemStack;)V # maybeDisableShield
